samples/_failures_safe/1761043529_31c864_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e69df432.c: In function ‘main’:
./samples/SAFE/__tmp_e69df432.c:168:12: error: missing terminating " character
  168 |     printf("Type\t
      |            ^~~~~~~
./samples/SAFE/__tmp_e69df432.c:168:5: error: expected expression at end of input
  168 |     printf("Type\t
      |     ^~~~~~
./samples/SAFE/__tmp_e69df432.c:168:5: error: expected declaration or statement at end of input
